--- a/Web/bomandyam/css/main.css
+++ b/Web/bomandyam/css/main.css
@@ -90,9 +90,6 @@ button{
 
 /*헤더 css*/
 
-.quick_left{
-    display: flex;
-}
 
 #container{
     width: 100%;
@@ -245,3 +242,5 @@ button{
     padding-top: 5px;
     font-size: 18px;
 }
+
+/*footer css*/
