--- a/Web/bomandyam/css/product.css
+++ b/Web/bomandyam/css/product.css
@@ -1,6 +1,6 @@
 .purchase_product{
     width: 100%;
-    height: 1000px;
+    height: 700px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -93,4 +93,16 @@ input{
     height: 70px;
     font-size: 20px;
     border: 1px solid #ffcb12;
+}
+
+/*상품구입 css*/
+
+.product_tab_area{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    border-top: 2px solid #333333;
+}
+
+.product_tab{
 }
