--- a/Web/bomandyam/css/product.css
+++ b/Web/bomandyam/css/product.css
@@ -99,10 +99,51 @@ input{
 
 .product_tab_area{
     display: flex;
-    width: 100%;
-    justify-content: center;
-    border-top: 2px solid #333333;
+    flex-direction: column;
+    align-items: center;
+    height: 1000px;
 }
 
 .product_tab{
+    width: 100%;
+    height: 80px;
+    background: #dfdfdf;
+    border-top: 2px solid #979797;
+    display: flex;
+    justify-content: center;
+}
+
+.tab_btn{
+    width: 400px;
+    height: 83px;
+    font-size: 25px;
+    border: 1px solid #979797;
+    margin-top: -1px;
+    outline: none;
+}
+
+.tab_btn.active{
+    color: #000;
+    background-color: #fff;
+}
+
+.tab_btn_area{
+    display: flex;
+    justify-content: space-around;
+    width: 1200px;
+}
+
+.tab_content{
+    width: 1200px;
+}
+
+.tab_info_title{
+    font-weight: bolder;
+    font-size: 36px;
+    padding: 80px 0 30px 0 ;
+}
+
+ul li{
+    font-size: 18px;
+    padding-bottom: 10px;
 }
