--- a/YamFront/views/index.ejs
+++ b/YamFront/views/index.ejs
@@ -17,10 +17,10 @@
     <div class="headerContainer">
       <div></div>
       <h1 class="logo">
-        <a href="../html/main.html">
+        <a href="/">
           <img src="images/logo.svg" alt="메인페이지 로고">
         </a>
-        <a class="logo_text" href="../html/main.html">
+        <a class="logo_text" href="/">
           <div class="logo_text">BOM and YAM</div>
         </a>
       </h1>
