--- a/YamAdmin/views/index.ejs
+++ b/YamAdmin/views/index.ejs
@@ -10,12 +10,12 @@
     <div class="wrap">
         <% include header_login.ejs%>
         <div class="container">
-            <a href="#">1. 메인 배너 관리</a><br>
-            <a href="#">2. BOM's pick 관리</a><br>
-            <a href="#">3. YAM's pick 관리</a><br>
-            <a href="#">4. DOG BEST 관리</a><br>
-            <a href="#">5. CAT BEST 관리</a><br>
-            <a href="#">6. NKOWHOW 관리</a><br>
+            <a href="/banner">1. 메인 배너 관리</a><br>
+            <a href="/bomspick">2. BOM's pick 관리</a><br>
+            <a href="/yamspick">3. YAM's pick 관리</a><br>
+            <a href="/dogbest">4. DOG BEST 관리</a><br>
+            <a href="/catbest">5. CAT BEST 관리</a><br>
+            <a href="/knowhow">6. NKOWHOW 관리</a><br>
         </div>
     </div>
 </body>
