--- a/YamFront/views/pages/privacy-policy.ejs
+++ b/YamFront/views/pages/privacy-policy.ejs
@@ -1,75 +1,16 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ko" lang="ko">
 <head>
-    <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>개인정보 처리방침</title>
-    <link rel="stylesheet" href="../stylesheets/main.css">
-    <link rel="stylesheet" href="../stylesheets/pick_icon.css">
-    <link rel="stylesheet" href="../stylesheets/floatbanner.css">
+    <%-include('partials/header.ejs');-%>
 </head>
 <body>
 <div id="wrap">
-    <div id="header_wrap">
-        <div class="headerContainer">
-            <div></div>
-            <h1 class="logo">
-                <a href="../index.html">
-                    <img src="../images/logo.svg" alt="메인페이지 로고">
-                </a>
-                <a class="logo_text" href="../index.html">
-                    <div class="logo_text">BOM and YAM</div>
-                </a>
-            </h1>
-            <div class="navi">
-                <ul class="navi_list">
-                    <li style="padding-right: 25px">
-                        <a href="../html/join.html">회원가입</a>
-                        /
-                        <a href="../html/login.html">로그인</a>
-                    </li>
-                    <li>
-                        <a href="#">장바구니</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <!--로고있는 헤더-->
-        <div class="headerBanner">
-            <div class="categoryWrap">
-                <div class="btnAllCategory">전체 카테고리</div>
-                <ul class="navi_list">
-                    <li style="padding-right: 25px">
-                        <a href="../html/best.html">베스트</a>
-                    </li>
-                    <li>
-                        <a href="#">노하우</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="search_area">
-                <input type="text" id="search_form" name="keyword" class="search_text">
-                <a href="#" class="search_img">
-                    <img src="../images/search.svg" alt="메인페이지 로고">
-                </a>
-            </div>
-        </div>
-        <!--카테고리헤더-->
-    </div>
+   <%-include('partials/nav.ejs');-%>
     <!--헤더-->
-    <a href="../html/bomspick.html">
-        <div class="BOM_icon">BOM's pick</div>
-    </a>
-    <a href="../html/yamspick.html">
-        <div class="YAM_icon">YAM's pick</div>
-    </a>
-    <div class="float_area">
-        <div class="float_menu">
-            <div class="side_banner">
-                <div class="side_title">추천상품</div>
-            </div>
-        </div>
-    </div>
+    <%-include('partials/pick_icon.ejs')-%>
+    <%-include('partials/floatbanner.ejs')-%>
     <div id="P_container">
         <div id="P_box">
             <p>
@@ -205,27 +146,7 @@
 
         </div>
     </div>
-    <div id="footer">
-        <div class="top_footer"></div>
-        <div class="bottom_footer">
-            <div class="footer_area">
-                <div class="page_title">
-                    <div class="footer_title">BOM and YAM</div>
-                    <div style="padding-bottom: 10px">대표전화</div>
-                    <b>1644-9601</b>
-                </div>
-                <div class="page_info">
-                    <div class="up_info">회사소개<div class="line"></div>이용약관<div class="line"></div>개인정보처리방침</div>
-                    <div class="down_info">(주)펫츠비 대표 : 전얌<br>
-                        주소 : 서울시 노원구 공릉로232 서울과학기술대학교 미래관3층<br>
-                        사업자 등록번호 : 111-22-33333 통신판매업신고번호 : 2020-공릉-0000<br>
-                        개인정보관리자 : 김봄 kimbom@bomandyam.com TEL : 1212-1212<br>
-                        copyright (c) www.bomandyam.shop all rights reserved.
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    <%-include('partials/footer.ejs')-%>
     <!--footer-->
 </div>
 </body>
