--- a/YamFront/views/pages/product-list.ejs
+++ b/YamFront/views/pages/product-list.ejs
@@ -3,12 +3,12 @@
 <head>
     <title>category</title>
     <link rel="stylesheet" href="../stylesheets/category.css">
-    <%-include('partials/header.ejs');-%>
+    <%-include('../partials/header.ejs');-%>
 <body>
 <div id="wrap">
-    <%-include('partials/header.ejs');-%>
+    <%-include('../partials/header.ejs');-%>
 </div>
-<%-include('partials.pick_icon.ejs');-%>
+<%-include('../partials/pick_icon.ejs');-%>
 <!--픽 고정배너-->
 <div id="C_container">
     <div class="cateItem1">
@@ -169,6 +169,6 @@
     </div>
 
 </div>
-<%-include('partials/footer.ejs');-%>
+<%-include('../partials/footer.ejs');-%>
 </body>
 </html>
