--- a/YamFront/views/pages/signup.ejs
+++ b/YamFront/views/pages/signup.ejs
@@ -3,12 +3,12 @@
 <head>
     <title>join</title>
     <link rel="stylesheet" href="../stylesheets/login.css">
-    <%-include('partials/header.ejs');-%>
+    <%-include('../partials/header.ejs');-%>
 </head>
 <body>
 <div id="wrap">
-    <%-include('partials/nav.ejs');-%>
-    <%-include('partials/pick_icon.ejs');-%>
+    <%-include('../partials/nav.ejs');-%>
+    <%-include('../partials/pick_icon.ejs');-%>
     <!--pick 아이콘-->
     <div id="container">
         <div class="join_text">회원가입</div>
@@ -30,7 +30,7 @@
             <button type="button" class="item jn_box">회원가입</button>
         </div>
     </div>
-    <%-include('partials/footer.ejs');-%>
+    <%-include('../partials/footer.ejs');-%>
 </div>
 </body>
 </html>
