--- a/YamFront/views/pages/yamspick.ejs
+++ b/YamFront/views/pages/yamspick.ejs
@@ -1,19 +1,19 @@
 <!doctype html>
 <html>
 <head>
-    <%-include('partials/header.ejs');-%>
+    <%-include('../partials/header.ejs');-%>
     <link rel="stylesheet" href="../stylesheets/pick.css">
     <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
     <title>YAM's pick</title>
 </head>
 <body>
 <div id="wrap">
-    <%-include('partials/nav.ejs');-%>
+    <%-include('../partials/nav.ejs');-%>
     <!--헤더-->
-    <%-include('partials/pick_icon.ejs');-%>
+    <%-include('../partials/pick_icon.ejs');-%>
     <!--pick 아이콘-->
     <div id="container">
-        <%-include('partials/floatbanner.ejs');-%>
+        <%-include('../partials/floatbanner.ejs');-%>
         <div class="pick">
             <div class="profile_title">
                 BOM's pick
@@ -144,7 +144,7 @@
         </div>
     </div>
     <!--컨테이너 영역-->
-    <%-include('partials/footer.ejs');-%>
+    <%-include('../partials/footer.ejs');-%>
     <!--footer-->
 </div>
 </body>
