--- a/YamFront/views/pages/privacy-policy.ejs
+++ b/YamFront/views/pages/privacy-policy.ejs
@@ -3,14 +3,14 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>개인정보 처리방침</title>
-    <%-include('partials/header.ejs');-%>
+    <%-include('../partials/header.ejs');-%>
 </head>
 <body>
 <div id="wrap">
-   <%-include('partials/nav.ejs');-%>
+   <%-include('../partials/nav.ejs');-%>
     <!--헤더-->
-    <%-include('partials/pick_icon.ejs')-%>
-    <%-include('partials/floatbanner.ejs')-%>
+    <%-include('../partials/pick_icon.ejs')-%>
+    <%-include('../partials/floatbanner.ejs')-%>
     <div id="P_container">
         <div id="P_box">
             <p>
@@ -146,7 +146,7 @@
 
         </div>
     </div>
-    <%-include('partials/footer.ejs')-%>
+    <%-include('../partials/footer.ejs')-%>
     <!--footer-->
 </div>
 </body>
