--- a/YamFront/views/pages/signin.ejs
+++ b/YamFront/views/pages/signin.ejs
@@ -3,11 +3,11 @@
 <head>
     <title>login</title>
     <link rel="stylesheet" href="../stylesheets/login.css">
-    <%-include('partials/header.ejs');-%>
+    <%-include('../partials/header.ejs');-%>
 </head>
 <body>
 <div id="wrap">
-    <%-include('partials/nav.ejs');-%>
+    <%-include('../partials/nav.ejs');-%>
     <%-include('partials/pick_icon,ejs');-%>
     <!--pick 아이콘-->
     <div id="container">
@@ -28,7 +28,7 @@
             <img src="../images/joinLink.svg" alt="회원가입창 이동">
         </a>
     </div>
-    <%-include('partials/footer.ejs');-%>
+    <%-include('../partials/footer.ejs');-%>
 </div>
 </body>
 </html>
