Add Fetch for FrontWeb

--- a/YamFront/views/pages/best.ejs
+++ b/YamFront/views/pages/best.ejs
@@ -28,128 +28,9 @@
                     <div></div>
                 </div>
                 <ul class="ani_best">
-                    <li>
-                        <a href="#">
-                            <div class="ani_product">
-                                <img src="../images/dogbest.svg" width="200px" height="200px" alt="얌이">
-                                <div class="product_text">
-                                    <div class="product_title">건강백서 건강한 피부 6kg</div>
-                                    <b>32,000원</b>
-                                </div>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <div class="ani_product">
-                                <img src="../images/dogbest.svg" width="200px" height="200px" alt="얌이">
-                                <div class="product_text">
-                                    <div class="product_title">건강백서 건강한 피부 6kg</div>
-                                    <b>32,000원</b>
-                                </div>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <div class="ani_product">
-                                <img src="../images/dogbest.svg" width="200px" height="200px" alt="얌이">
-                                <div class="product_text">
-                                    <div class="product_title">건강백서 건강한 피부 6kg</div>
-                                    <b>32,000원</b>
-                                </div>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <div class="ani_product">
-                                <img src="../images/dogbest.svg" width="200px" height="200px" alt="얌이">
-                                <div class="product_text">
-                                    <div class="product_title">건강백서 건강한 피부 6kg</div>
-                                    <b>32,000원</b>
-                                </div>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <div class="ani_product">
-                                <img src="../images/dogbest.svg" width="200px" height="200px" alt="얌이">
-                                <div class="product_text">
-                                    <div class="product_title">건강백서 건강한 피부 6kg</div>
-                                    <b>32,000원</b>
-                                </div>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <div class="ani_product">
-                                <img src="../images/dogbest.svg" width="200px" height="200px" alt="얌이">
-                                <div class="product_text">
-                                    <div class="product_title">건강백서 건강한 피부 6kg</div>
-                                    <b>32,000원</b>
-                                </div>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <div class="ani_product">
-                                <img src="../images/dogbest.svg" width="200px" height="200px" alt="얌이">
-                                <div class="product_text">
-                                    <div class="product_title">건강백서 건강한 피부 6kg</div>
-                                    <b>32,000원</b>
-                                </div>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <div class="ani_product">
-                                <img src="../images/dogbest.svg" width="200px" height="200px" alt="얌이">
-                                <div class="product_text">
-                                    <div class="product_title">건강백서 건강한 피부 6kg</div>
-                                    <b>32,000원</b>
-                                </div>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <div class="ani_product">
-                                <img src="../images/dogbest.svg" width="200px" height="200px" alt="얌이">
-                                <div class="product_text">
-                                    <div class="product_title">건강백서 건강한 피부 6kg</div>
-                                    <b>32,000원</b>
-                                </div>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <div class="ani_product">
-                                <img src="../images/dogbest.svg" width="200px" height="200px" alt="얌이">
-                                <div class="product_text">
-                                    <div class="product_title">건강백서 건강한 피부 6kg</div>
-                                    <b>32,000원</b>
-                                </div>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <div class="ani_product">
-                                <img src="../images/dogbest.svg" width="200px" height="200px" alt="얌이">
-                                <div class="product_text">
-                                    <div class="product_title">건강백서 건강한 피부 6kg</div>
-                                    <b>32,000원</b>
-                                </div>
-                            </div>
-                        </a>
-                    </li>
-
+                    <% products.forEach(product => { %>
+                        <li> <%- include('../partials/product', {product: product});%></li>
+                    <% }) %>
                 </ul>
             </div>
         </div>
