--- a/YamFront/views/pages/product-list.ejs
+++ b/YamFront/views/pages/product-list.ejs
@@ -33,138 +33,9 @@
             </ul>
         </div>
         <ul class="cate_ani_best">
-            <li>
-                <a href="#">
-                    <div class="cate_ani_product">
-                        <img src="../images/dogbest.svg">
-                        <div class="cate_product_text">
-                            <div class="product_title">건강백서 건강한 피부 6kg</div>
-                            <b>32,000원</b>
-                        </div>
-                    </div>
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <div class="cate_ani_product">
-                        <img src="../images/dogbest.svg">
-                        <div class="cate_product_text">
-                            <div class="cate_product_title">건강백서 건강한 피부 6kg</div>
-                            <b>32,000원</b>
-                        </div>
-                    </div>
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <div class="cate_ani_product">
-                        <img src="../images/dogbest.svg">
-                        <div class="cate_product_text">
-                            <div class="cate_product_title">건강백서 건강한 피부 6kg</div>
-                            <b>32,000원</b>
-                        </div>
-                    </div>
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <div class="cate_ani_product">
-                        <img src="../images/dogbest.svg">
-                        <div class="cate_product_text">
-                            <div class="product_title">건강백서 건강한 피부 6kg</div>
-                            <b>32,000원</b>
-                        </div>
-                    </div>
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <div class="cate_ani_product">
-                        <img src="../images/dogbest.svg">
-                        <div class="cate_product_text">
-                            <div class="cate_product_title">건강백서 건강한 피부 6kg</div>
-                            <b>32,000원</b>
-                        </div>
-                    </div>
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <div class="cate_ani_product">
-                        <img src="../images/dogbest.svg">
-                        <div class="cate_product_text">
-                            <div class="cate_product_title">건강백서 건강한 피부 6kg</div>
-                            <b>32,000원</b>
-                        </div>
-                    </div>
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <div class="cate_ani_product">
-                        <img src="../images/dogbest.svg">
-                        <div class="cate_product_text">
-                            <div class="cate_product_title">건강백서 건강한 피부 6kg</div>
-                            <b>32,000원</b>
-                        </div>
-                    </div>
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <div class="cate_ani_product">
-                        <img src="../images/dogbest.svg">
-                        <div class="cate_product_text">
-                            <div class="cate_product_title">건강백서 건강한 피부 6kg</div>
-                            <b>32,000원</b>
-                        </div>
-                    </div>
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <div class="cate_ani_product">
-                        <img src="../images/dogbest.svg">
-                        <div class="cate_product_text">
-                            <div class="cate_product_title">건강백서 건강한 피부 6kg</div>
-                            <b>32,000원</b>
-                        </div>
-                    </div>
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <div class="cate_ani_product">
-                        <img src="../images/dogbest.svg">
-                        <div class="cate_product_text">
-                            <div class="cate_product_title">건강백서 건강한 피부 6kg</div>
-                            <b>32,000원</b>
-                        </div>
-                    </div>
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <div class="cate_ani_product">
-                        <img src="../images/dogbest.svg">
-                        <div class="cate_product_text">
-                            <div class="cate_product_title">건강백서 건강한 피부 6kg</div>
-                            <b>32,000원</b>
-                        </div>
-                    </div>
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <div class="cate_ani_product">
-                        <img src="../images/dogbest.svg">
-                        <div class="cate_product_text">
-                            <div class="cate_product_title">건강백서 건강한 피부 6kg</div>
-                            <b>32,000원</b>
-                        </div>
-                    </div>
-                </a>
-            </li>
+            <% products.forEach(product => { %>
+                <li> <%- include('../partials/product', {product: product});%></li>
+            <% }) %>
         </ul>
     </div>
 
