--- a/YamFront/views/pages/yamspick.ejs
+++ b/YamFront/views/pages/yamspick.ejs
@@ -32,114 +32,9 @@
                 </div>
             </div>
             <div class="pick_product">
-                <a href="#">
-                    <div class="ani_product">
-                        <img src="../images/dogbest.svg" width="200px" height="200px" alt="얌이">
-                        <div class="product_text">
-                            <div class="product_title">건강백서 건강한 피부 6kg</div>
-                            <b>32,000원</b>
-                        </div>
-                    </div>
-                </a>
-                <a href="#">
-                    <div class="ani_product">
-                        <img src="../images/dogbest.svg" width="200px" height="200px" alt="얌이">
-                        <div class="product_text">
-                            <div class="product_title">건강백서 건강한 피부 6kg</div>
-                            <b>32,000원</b>
-                        </div>
-                    </div>
-                </a>
-                <a href="#">
-                    <div class="ani_product">
-                        <img src="../images/dogbest.svg" width="200px" height="200px" alt="얌이">
-                        <div class="product_text">
-                            <div class="product_title">건강백서 건강한 피부 6kg</div>
-                            <b>32,000원</b>
-                        </div>
-                    </div>
-                </a>
-                <a href="#">
-                    <div class="ani_product">
-                        <img src="../images/dogbest.svg" width="200px" height="200px" alt="얌이">
-                        <div class="product_text">
-                            <div class="product_title">건강백서 건강한 피부 6kg</div>
-                            <b>32,000원</b>
-                        </div>
-                    </div>
-                </a>
-                <a href="#">
-                    <div class="ani_product">
-                        <img src="../images/dogbest.svg" width="200px" height="200px" alt="얌이">
-                        <div class="product_text">
-                            <div class="product_title">건강백서 건강한 피부 6kg</div>
-                            <b>32,000원</b>
-                        </div>
-                    </div>
-                </a>
-                <a href="#">
-                    <div class="ani_product">
-                        <img src="../images/dogbest.svg" width="200px" height="200px" alt="얌이">
-                        <div class="product_text">
-                            <div class="product_title">건강백서 건강한 피부 6kg</div>
-                            <b>32,000원</b>
-                        </div>
-                    </div>
-                </a>
-                <a href="#">
-                    <div class="ani_product">
-                        <img src="../images/dogbest.svg" width="200px" height="200px" alt="얌이">
-                        <div class="product_text">
-                            <div class="product_title">건강백서 건강한 피부 6kg</div>
-                            <b>32,000원</b>
-                        </div>
-                    </div>
-                </a>
-                <a href="#">
-                    <div class="ani_product">
-                        <img src="../images/dogbest.svg" width="200px" height="200px" alt="얌이">
-                        <div class="product_text">
-                            <div class="product_title">건강백서 건강한 피부 6kg</div>
-                            <b>32,000원</b>
-                        </div>
-                    </div>
-                </a>
-                <a href="#">
-                    <div class="ani_product">
-                        <img src="../images/dogbest.svg" width="200px" height="200px" alt="얌이">
-                        <div class="product_text">
-                            <div class="product_title">건강백서 건강한 피부 6kg</div>
-                            <b>32,000원</b>
-                        </div>
-                    </div>
-                </a>
-                <a href="#">
-                    <div class="ani_product">
-                        <img src="../images/dogbest.svg" width="200px" height="200px" alt="얌이">
-                        <div class="product_text">
-                            <div class="product_title">건강백서 건강한 피부 6kg</div>
-                            <b>32,000원</b>
-                        </div>
-                    </div>
-                </a>
-                <a href="#">
-                    <div class="ani_product">
-                        <img src="../images/dogbest.svg" width="200px" height="200px" alt="얌이">
-                        <div class="product_text">
-                            <div class="product_title">건강백서 건강한 피부 6kg</div>
-                            <b>32,000원</b>
-                        </div>
-                    </div>
-                </a>
-                <a href="#">
-                    <div class="ani_product">
-                        <img src="../images/dogbest.svg" width="200px" height="200px" alt="얌이">
-                        <div class="product_text">
-                            <div class="product_title">건강백서 건강한 피부 6kg</div>
-                            <b>32,000원</b>
-                        </div>
-                    </div>
-                </a>
+                <% products.forEach(product => { %>
+                    <li> <%- include('../partials/product', {product: product});%></li>
+                <% }) %>
             </div>
         </div>
     </div>
