--- a/YamAdmin/views/login.ejs
+++ b/YamAdmin/views/login.ejs
@@ -12,8 +12,8 @@
         <div class="login_title">로그인</div>
         <div class="login_box">
           <div class="item login_txt">관리자 로그인</div>
-          <input type="text" class="item id_box" onfocus="this.value=''" value="아이디(이메일)"></input>
-          <input type="text" class="item pwd_box" onfocus="this.value=''" value="비밀번호"></input>
+          <input name="user_id" type="text" class="item id_box" onfocus="this.value=''" value="아이디(이메일)"></input>
+          <input name="user_pw" type="password" class="item pwd_box" onfocus="this.value=''" value="비밀번호"></input>
           <button type="button" class="item log_box">로그인</button>
           <label>
             <input type="checkbox" class="item2 loginCheck_txt">아이디 저장</input>
