--- a/YamFront/views/partials/header.ejs
+++ b/YamFront/views/partials/header.ejs
@@ -2,3 +2,4 @@
 <link rel="stylesheet" href="../stylesheets/main.css">
 <link rel="stylesheet" href="../stylesheets/floatbanner.css">
 <link rel="stylesheet" href="../stylesheets/pick_icon.css">
+<script type="text/javascript" src="javascripts/main.js"></script>
