-Category 별 Product Paging기능 추가

--- a/YamFront/views/pages/product-info.ejs
+++ b/YamFront/views/pages/product-info.ejs
@@ -28,7 +28,7 @@
                     </div>
                     <div class="purchase_pay">
                         <div>판매가</div>
-                        <div><%= product.price %></div>
+                        <div><%= product.price.toLocaleString() %>원</div>
                     </div>
                     <div style="color: #00ffba">택배 배송</div>
                     <div class="color_font">16시 이전 결제시 당일 출고 예정</div>
