--- a/YamFront/views/pages/product-list.ejs
+++ b/YamFront/views/pages/product-list.ejs
@@ -14,8 +14,8 @@
     <div class="cateItem1">
         <ul class="cate_inav">
             <li><a href="#"><img src="../images/home.svg" alt="홈 로고"></a></li> >
-            <li><a href="#">강아지</a> ></li>
-            <li><a href="#">사료</a> ></li>
+            <li><a href="#">강아지</a></li>
+            <li><a href="#">사료</a></li>
             <li><a href="#">건식</a></li>
         </ul>
         <div class="cate_nav">
