--- a/YamFront/views/pages/product-list.ejs
+++ b/YamFront/views/pages/product-list.ejs
@@ -32,14 +32,22 @@
                 <li>높은 가격순</li>
             </ul>
         </div>
+
         <ul class="cate_ani_best">
-            <% products.forEach(product => { %>
-            <li> <%- include('../partials/product', {product: product});%></li>
-            <% }) %>
+            <% if (products.contents.length != 0) { %>
+                <% products.contents.forEach(function(product){ %>
+                    <li> <%- include('../partials/product', {product: product});%></li>
+                <% }); %>
+            <% } else { %>
+                <tr>
+                    <td>등록된 상품이 없습니다./td>
+                </tr>
+            <% } %>
         </ul>
 
     </div>
 </div>
+<%-include('../partials/pagination');-%>
 <%-include('../partials/footer.ejs');-%>
 </body>
 </html>
