update category by categorySEq API for getting parent categories

--- a/YamFront/public/stylesheets/main.css
+++ b/YamFront/public/stylesheets/main.css
@@ -72,8 +72,16 @@ button{
     display: none;
 }
 
-.btnAllCategory ul li:hover ul{
+.btnAllCategory:hover ul{
     display: block;
+    position: absolute;
+    z-index: 14;
+    background-color: rgba(0,0,0,0.6);
+    color: white;
+}
+.btnAllCategory:hover li{
+    width:210px;
+    display: inline-block;
 }
 
 .search_area{
