--- a/YamFront/views/partials/navigation.ejs
+++ b/YamFront/views/partials/navigation.ejs
@@ -1,1 +1,5 @@
-<div><%= category.name%></div>
+<a href=<%= "/product?categorySeq=" + category.categorySeq %>>
+    <div>
+        <%= category.categoryName %>
+    </div>
+</a>
