--- a/YamFront/views/pages/product-list.ejs
+++ b/YamFront/views/pages/product-list.ejs
@@ -6,7 +6,7 @@
     <%-include('../partials/header.ejs');-%>
 <body>
 <div id="wrap">
-    <%-include('../partials/header.ejs');-%>
+    <%-include('../partials/nav.ejs');-%>
 </div>
 <%-include('../partials/pick_icon.ejs');-%>
 <!--픽 고정배너-->
