--- a/YamFront/views/pages/product-list.ejs
+++ b/YamFront/views/pages/product-list.ejs
@@ -14,9 +14,11 @@
     <div class="cateItem1">
         <ul class="cate_inav">
             <li><a href="#"><img src="../images/home.svg" alt="홈 로고"></a></li> >
-            <li><a href="#">강아지</a></li>
-            <li><a href="#">사료</a></li>
-            <li><a href="#">건식</a></li>
+            <% currentCategories.reverse()%>
+            <% currentCategories.forEach( category => {%>
+            <li><a href=<%='/product?categorySeq='+category.categorySeq%>><%= category.categoryName %></a></li>
+            <% });%>
+            <% currentCategories.reverse()%>
         </ul>
         <div class="cate_nav">
             <button class="cate_dog">강아지</button>
@@ -24,7 +26,7 @@
         </div>
     </div>
     <div class="cateItem2">
-        <div class="cate_text">건식 카테고리에 23개의 상품이 있습니다.</div>
+        <div class="cate_text"><%= currentCategories[0].categoryName+" 카테고리에 상품이 "+products.pnTotal.toLocaleString()+"개 있습니다."%></div>
         <div class="cate_sort">
             <ul>
                 <li>인기순</li>
@@ -47,7 +49,7 @@
 
     </div>
 </div>
-<%-include('../partials/pagination');-%>
+<%-include('../partials/pagination', {products: products});-%>
 <%-include('../partials/footer.ejs');-%>
 </body>
 </html>
